--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity Web Player | Codename Infinite Space</title>
+    <title>Unity Web Player | Stellarria Asteroid Escape</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-logo-title-footer"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Codename Infinite Space</div>
+        <div id="unity-build-title">Stellarria Asteroid Escape</div>
       </div>
     </div>
     <script>
@@ -52,16 +52,16 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/WebGLBuild.loader.js";
+      var loaderUrl = buildUrl + "/WebGL Build.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/WebGLBuild.data",
-        frameworkUrl: buildUrl + "/WebGLBuild.framework.js",
-        codeUrl: buildUrl + "/WebGLBuild.wasm",
+        dataUrl: buildUrl + "/WebGL Build.data",
+        frameworkUrl: buildUrl + "/WebGL Build.framework.js",
+        codeUrl: buildUrl + "/WebGL Build.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "TabuuTKS",
-        productName: "Codename Infinite Space",
-        productVersion: "0.1.0",
+        productName: "Stellarria Asteroid Escape",
+        productVersion: "1.0",
         showBanner: unityShowBanner,
       };
 
